--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,6 +264,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 100vh;
   background: url("../img/hero-bg.jpg") top right no-repeat;
   position: relative;
+  background-position: 85%;
 }
 
 @media (min-width: 992px) {
